--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,80 +1,89 @@
-    <?xml version="1.0" encoding="utf-8"?>
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/main"
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/main"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    tools:context=".MainActivity">
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        tools:context=".MainActivity">
+        android:layout_height="164dp"
+        android:layout_marginHorizontal="30dp"
+        android:layout_marginTop="92dp"
+        android:background="@drawable/rounded_frame"
+        android:orientation="vertical">
 
-        <LinearLayout
+        <TextView
+            android:id="@+id/staticText"
             android:layout_width="match_parent"
-            android:layout_height="164dp"
-            android:layout_marginHorizontal="30dp"
-            android:layout_marginTop="92dp"
-            android:background="@drawable/rounded_frame"
-            android:orientation="vertical">
+            android:layout_height="wrap_content"
+            android:layout_marginTop="18dp"
+            android:text="@string/main_page_block"
+            android:textAlignment="center"
+            android:textSize="20sp" />
 
-            <TextView
-                android:id="@+id/staticText"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="18dp"
-                android:text="@string/main_page_block"
-                android:textAlignment="center"
-                android:textSize="20sp" />
+        <TextView
+            android:id="@+id/totalCost"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="@string/Default_jobCost"
+            android:textAlignment="center"
+            android:textSize="40sp" />
 
-            <TextView
-                android:id="@+id/totalCost"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:text="@string/Default_jobCost"
-                android:textAlignment="center"
-                android:textSize="40sp" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="@string/Default_data"
+            android:textAlignment="center"
+            android:textSize="20sp" />
+    </LinearLayout>
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textAlignment="center"
-                android:textSize="20sp"
-                android:layout_marginTop="10dp"
-                android:text="@string/Default_data"/>
-        </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="286dp"
+        android:orientation="vertical">
+
 
         <Button
             android:id="@+id/buttonNewData"
             android:layout_width="match_parent"
             android:layout_height="54dp"
-            android:text="@string/buttonNewData"
-            android:layout_marginTop="230dp"
             android:layout_gravity="center"
             android:layout_marginHorizontal="30dp"
-            android:textSize="20sp"
-            android:textColor="@color/text"/>
+            android:text="@string/buttonNewData"
+            android:textColor="@color/text"
+            android:textSize="20sp" />
 
         <Button
             android:id="@+id/buttonGetData"
             android:layout_width="match_parent"
             android:layout_height="54dp"
-            android:text="@string/buttonGetData"
-            android:layout_marginTop="16dp"
             android:layout_gravity="center"
             android:layout_marginHorizontal="30dp"
-            android:textSize="20sp"
-            android:textColor="@color/text"/>
+            android:layout_marginTop="28dp"
+            android:text="@string/buttonGetData"
+            android:textColor="@color/text"
+            android:textSize="20sp" />
 
         <Button
             android:id="@+id/buttonSettings"
             android:layout_width="match_parent"
             android:layout_height="54dp"
-            android:text="@string/buttonSettings"
-            android:layout_marginTop="16dp"
             android:layout_gravity="center"
             android:layout_marginHorizontal="30dp"
-            android:textSize="20sp"
-            android:textColor="@color/text"/>
-
+            android:layout_marginTop="28dp"
+            android:text="@string/buttonSettings"
+            android:textColor="@color/text"
+            android:textSize="20sp" />
 
     </LinearLayout>
+
+
+
+</LinearLayout>
