--- a/app/src/main/res/layout/activity_new_data.xml
+++ b/app/src/main/res/layout/activity_new_data.xml
@@ -70,6 +70,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="30dp"
+        android:enabled="false"
         android:layout_marginTop="8dp"
         android:background="@drawable/rounded_input" />
 
