--- a/app/src/main/res/layout/activity_new_data.xml
+++ b/app/src/main/res/layout/activity_new_data.xml
@@ -21,7 +21,7 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="30dp"
         android:layout_marginTop="8dp"
-        android:background="@drawable/rounded_input" />
+        android:background="@drawable/input_selector" />
 
     <TextView
         android:layout_width="match_parent"
@@ -36,7 +36,7 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="30dp"
         android:layout_marginTop="8dp"
-        android:background="@drawable/rounded_input" />
+        android:background="@drawable/input_selector" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -70,9 +70,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="30dp"
-        android:enabled="false"
+        android:enabled="true"
         android:layout_marginTop="8dp"
-        android:background="@drawable/rounded_input" />
+        android:alpha="0.5"
+        android:background="@drawable/input_selector" />
 
     <Button
         android:id="@+id/buttonSaveNewData"
