--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,6 @@
     <color name="orange">#FF5722</color>
     <color name="app_backgroung">#F5F5F5</color>
     <color name="text">#424242</color>
-    <color name="input_background">#D9D9D9</color>
+    <color name="input_normal_background">#9E9E9E</color>
+    <color name="input_focused_background">#D9D9D9</color>
 </resources>
