--- a/app/src/main/res/drawable/input_focused.xml
+++ b/app/src/main/res/drawable/input_focused.xml
@@ -1,11 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
-    <!-- Фон -->
     <solid android:color="@color/input_focused_background"/>
-    <!-- Обводка с акцентом -->
-    <stroke android:width="1dp" android:color="@color/orange"/>
-    <!-- Скруглённые углы -->
+    <stroke android:width="1dp" android:color="@color/blue"/>
     <corners android:radius="7dp"/>
-    <!-- Внутренние отступы -->
     <padding android:left="8dp" android:top="8dp" android:right="8dp" android:bottom="8dp"/>
 </shape>
