--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -57,7 +57,6 @@
             android:layout_gravity="center"
             android:layout_marginHorizontal="30dp"
             android:text="@string/buttonNewData"
-            android:textColor="@color/text"
             android:textSize="20sp" />
 
         <Button
@@ -67,8 +66,8 @@
             android:layout_gravity="center"
             android:layout_marginHorizontal="30dp"
             android:layout_marginTop="28dp"
+            android:enabled="false"
             android:text="@string/buttonGetData"
-            android:textColor="@color/text"
             android:textSize="20sp" />
 
         <Button
@@ -78,8 +77,8 @@
             android:layout_gravity="center"
             android:layout_marginHorizontal="30dp"
             android:layout_marginTop="28dp"
+            android:enabled="false"
             android:text="@string/buttonSettings"
-            android:textColor="@color/text"
             android:textSize="20sp" />
 
     </LinearLayout>
