--- a/app/src/main/res/layout/activity_new_data.xml
+++ b/app/src/main/res/layout/activity_new_data.xml
@@ -8,6 +8,16 @@
     android:orientation="vertical"
     tools:context=".NewDataActivity">
 
+    <ImageButton
+        android:id="@+id/arrow_back"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginHorizontal="20dp"
+        android:scaleType="fitCenter"
+        android:src="@drawable/navbar___left"
+        android:background="@android:color/transparent"/>
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -20,8 +30,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="30dp"
-        android:layout_marginTop="8dp"
-        android:background="@drawable/input_selector" />
+        android:layout_marginTop="8dp" />
 
     <TextView
         android:layout_width="match_parent"
@@ -35,8 +44,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="30dp"
-        android:layout_marginTop="8dp"
-        android:background="@drawable/input_selector" />
+        android:layout_marginTop="8dp" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -53,9 +61,12 @@
             android:text="@string/switchForAdditionalPoints"
             android:textSize="20sp" />
 
-        <Switch
+        <androidx.appcompat.widget.SwitchCompat
+            android:id="@+id/switchbtn"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            app:thumbTint="@color/input_normal_background"
+            app:trackTint="@color/input_disabled_background"/>
     </LinearLayout>
 
     <TextView
@@ -67,20 +78,20 @@
         android:textSize="20sp" />
 
     <EditText
+        android:id="@+id/additionalInput"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="30dp"
-        android:enabled="true"
+        android:enabled="false"
         android:layout_marginTop="8dp"
-        android:alpha="0.5"
-        android:background="@drawable/input_selector" />
+        android:alpha="0.5" />
 
     <Button
         android:id="@+id/buttonSaveNewData"
         android:layout_width="match_parent"
         android:layout_height="54dp"
         android:text="@string/buttonSaveNewData"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="120dp"
         android:layout_gravity="center"
         android:layout_marginHorizontal="30dp"
         android:textSize="20sp"
