--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,9 +2,12 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="orange">#FF5722</color>
-    <color name="app_backgroung">#F5F5F5</color>
-    <color name="text">#424242</color>
-    <color name="input_normal_background">#9E9E9E</color>
-    <color name="input_focused_background">#D9D9D9</color>
+    <color name="blue">#00ACC1</color>
+    <color name="app_background">#2C3E50</color>
+    <color name="text">#ECF0F1</color>
+    <color name="input_normal_background">#455A64</color>
+    <color name="input_focused_background">#607D8B</color>
+    <color name="input_disabled_background">#37474F</color>
+    <color name="button_pressed">#00838F</color>
+    <color name="button_disabled">#78909C</color>
 </resources>
