--- a/app/src/main/res/layout/activity_new_data.xml
+++ b/app/src/main/res/layout/activity_new_data.xml
@@ -27,7 +27,10 @@
         android:textSize="20sp" />
 
     <EditText
+        android:id="@+id/inputPointsCount"
         android:layout_width="match_parent"
+        android:inputType="number"
+        android:digits="0123456789"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="30dp"
         android:layout_marginTop="8dp" />
@@ -41,8 +44,11 @@
         android:textSize="20sp" />
 
     <EditText
+        android:id="@+id/inputTotalWeight"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:inputType="number"
+        android:digits="0123456789"
         android:layout_marginHorizontal="30dp"
         android:layout_marginTop="8dp" />
 
@@ -82,6 +88,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="30dp"
+        android:inputType="number"
+        android:digits="0123456789"
         android:enabled="false"
         android:layout_marginTop="8dp"
         android:alpha="0.5" />
