add deleteDB func

--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -9,6 +9,7 @@
     android:orientation="vertical">
 
     <Button
+        android:id="@+id/buttonDeleteDB"
         android:layout_width="100dp"
         android:layout_height="50dp"
         android:text="Delete all"
