--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
-    <color name="blue">#00ACC1</color>
-    <color name="app_background">#2C3E50</color>
-    <color name="text">#ECF0F1</color>
-    <color name="input_normal_background">#455A64</color>
-    <color name="input_focused_background">#607D8B</color>
-    <color name="input_disabled_background">#37474F</color>
-    <color name="button_pressed">#00838F</color>
-    <color name="button_disabled">#78909C</color>
-</resources>
+    <resources>
+        <color name="blue">#00ACC1</color>
+        <color name="app_background">#2C3E50</color>
+        <color name="modal_background">#34495E</color>
+        <color name="text">#F1ECEC</color>
+        <color name="tex1">#ECEDF1</color>
+        <color name="input_normal_background">#455A64</color>
+        <color name="input_focused_background">#607D8B</color>
+        <color name="input_disabled_background">#37474F</color>
+        <color name="button_pressed">#00838F</color>
+        <color name="button_disabled">#78909C</color>
+    </resources>
