--- a/app/src/main/res/layout/activity_editconst_modal.xml
+++ b/app/src/main/res/layout/activity_editconst_modal.xml
@@ -1,17 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="350dp"
-    android:layout_height="500dp"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_marginVertical="180dp"
+    android:layout_marginHorizontal="30dp"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_gravity="center"
     android:orientation="vertical"
-    android:background="@drawable/rounded_modal">
+    android:background="@drawable/rounded_modal"
+    tools:context=".EditConstActivityModal">
+
+    <ImageButton
+        android:id="@+id/x_close"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginHorizontal="20dp"
+        android:layout_gravity="end"
+        android:scaleType="fitCenter"
+        android:src="@drawable/close"
+        android:background="@android:color/transparent"/>
+
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/modalTitle"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="10dp"
         android:textSize="20sp"
         />
 
