--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -66,7 +66,7 @@
             android:layout_gravity="center"
             android:layout_marginHorizontal="30dp"
             android:layout_marginTop="28dp"
-            android:enabled="false"
+            android:enabled="true"
             android:text="@string/buttonGetData"
             android:textSize="20sp" />
 
