--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,6 @@
         <color name="input_disabled_background">#37474F</color>
         <color name="button_pressed">#00838F</color>
         <color name="button_disabled">#78909C</color>
+        <color name="error_text">#D10F0F</color>
+
     </resources>
