--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -51,7 +51,7 @@
 
 
         <Button
-            android:id="@+id/buttonNewData"
+            android:id="@+id/buttonGetDataForDay"
             android:layout_width="match_parent"
             android:layout_height="54dp"
             android:layout_gravity="center"
