--- a/app/src/main/res/layout/activity_editconst_modal.xml
+++ b/app/src/main/res/layout/activity_editconst_modal.xml
@@ -77,11 +77,11 @@
 
 
     <EditText
-        android:id="@+id/pricePerPointConst"
+        android:id="@+id/pricePerTon"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="number"
-        android:digits="0123456789"
+        android:digits=".0123456789"
         android:layout_marginTop="5dp"
         android:layout_marginHorizontal="15dp"/>
 
@@ -91,7 +91,7 @@
         android:layout_height="54dp"
         android:layout_gravity="center_horizontal"
         android:textSize="20sp"
-        android:enabled="false"
+        android:enabled="true"
         android:text="@string/buttonSaveConst"
         android:layout_marginHorizontal="20dp"
         android:layout_marginBottom="30dp"
