--- a/app/src/main/res/layout/activity_get_data_for_month.xml
+++ b/app/src/main/res/layout/activity_get_data_for_month.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/main"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical">
 
     <ImageButton
-        android:id="@+id/arrow_back2"
+        android:id="@+id/arrow_back3"
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:layout_marginTop="30dp"
@@ -16,47 +15,51 @@
         android:src="@drawable/navbar___left"
         android:background="@android:color/transparent"/>
 
+    <Spinner
+        android:id="@+id/spinnerMonth"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:layout_marginHorizontal="30dp"
+        android:background="@drawable/input_selector"/>
 
-    <!-- Не редактируемое поле для даты -->
     <EditText
-        android:id="@+id/inputToPickADate"
+        android:id="@+id/etYear"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/inputChoseDate"
-        android:focusable="false"
+        android:layout_marginTop="20dp"
         android:layout_marginHorizontal="30dp"
-        android:layout_marginTop="50dp"
-        android:inputType="date" />
+        android:inputType="number"
+        android:digits="0123456789"
+        android:maxLength="4"
+        android:hint="@string/edittextYear"/>
 
-    <!-- Здесь можно разместить другие элементы, например, контейнер для отображения результатов -->
-    <TextView
-        android:id="@+id/textViewResults"
+    <Button
+        android:id="@+id/buttonLoadData"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="54dp"
         android:layout_marginHorizontal="30dp"
-        android:text="@string/textViewOnGetDayData"
-        android:gravity="center_horizontal"
+        android:layout_marginTop="20dp"
+        android:text="@string/buttonLoadData"
+        android:textSize="20sp"/>
+
+    <TextView
+        android:id="@+id/noDataForMonth"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/alertNoDataForMonth"
         android:textSize="20sp"
-        android:layout_marginTop="24dp"/>
-
-    <TextView
-        android:id="@+id/tvAlertNoRecords"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="30dp"
-        android:text="@string/alertNoRecords"
+        android:layout_gravity="center_horizontal"
         android:textColor="@color/error_text"
         android:visibility="invisible"
-        android:gravity="center_horizontal"
-        android:textSize="20sp"
-        android:layout_marginTop="24dp"/>
+        android:layout_marginTop="10dp"/>
 
     <LinearLayout
-        android:id="@+id/getDataForDayResult"
+        android:id="@+id/getDataForMonthResult"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="30dp"
-
+        android:layout_marginTop="2dp"
         android:visibility="invisible"
         android:orientation="vertical"
         android:paddingBottom="40dp"
@@ -66,17 +69,17 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="30dp"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="20dp"
             android:gravity="center_horizontal"
-            android:text="@string/pointsForDay"
+            android:text="@string/pointsForMonth"
             android:textSize="20sp" />
 
         <TextView
-            android:id="@+id/edittextPointsForDay"
+            android:id="@+id/edittextPointsForMonth"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="30dp"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="20dp"
             android:gravity="center_horizontal"
             android:textSize="20sp"
             tools:text="Colvo-tocheck" />
@@ -85,17 +88,17 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="30dp"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="20dp"
             android:gravity="center_horizontal"
-            android:text="@string/cargoWeightForDay"
+            android:text="@string/cargoWeightForMonth"
             android:textSize="20sp" />
 
         <TextView
-            android:id="@+id/edittextTotalWeight"
+            android:id="@+id/edittextTotalWeightMonth"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="30dp"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="20dp"
             android:gravity="center_horizontal"
             tools:text="Ves za den"
             android:textSize="20sp" />
@@ -104,17 +107,17 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="30dp"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="20dp"
             android:gravity="center_horizontal"
-            android:text="@string/AdditionalPointsForDay"
+            android:text="@string/AdditionalPointsForMonth"
             android:textSize="20sp" />
 
         <TextView
-            android:id="@+id/edittextAdditionalPoints"
+            android:id="@+id/edittextAdditionalPointsMonth"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="30dp"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="20dp"
             android:gravity="center_horizontal"
             tools:text="additPoint"
             android:textSize="20sp" />
@@ -123,22 +126,20 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="30dp"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="20dp"
             android:gravity="center_horizontal"
-            android:text="@string/TotalJobCost"
+            android:text="@string/TotalJobCostMonth"
             android:textSize="20sp" />
 
         <TextView
-            android:id="@+id/totalJobPaid"
+            android:id="@+id/totalJobPaidMonth"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="30dp"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="20dp"
             android:gravity="center_horizontal"
-            tools:text="zarplata"
-            android:textSize="20sp" />
+            android:textSize="20sp"
+            tools:text="zarplata" />
 
     </LinearLayout>
-
-
 </LinearLayout>
