--- a/app/src/main/res/layout/activity_first_add_constants.xml
+++ b/app/src/main/res/layout/activity_first_add_constants.xml
@@ -1,47 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:id="@+id/main"
     android:layout_height="match_parent"
-    android:layout_marginVertical="180dp"
-    android:layout_marginHorizontal="30dp"
+
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_gravity="center"
     android:orientation="vertical"
     android:background="@drawable/rounded_modal"
     tools:context=".EditConstActivityModal">
 
-    <ImageButton
-        android:id="@+id/x_close"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginHorizontal="20dp"
-        android:layout_gravity="end"
-        android:scaleType="fitCenter"
-        android:src="@drawable/close"
-        android:background="@android:color/transparent"/>
+    <LinearLayout
 
-
-    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/modalTitle"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="10dp"
-        android:textSize="20sp"
-        />
+        android:layout_gravity="center"
+        android:orientation="vertical"
+        android:layout_marginTop="50dp"
+        android:layout_marginHorizontal="30dp"
+        android:padding = "30dp"
+        android:background="@drawable/rounded_frame">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/Greeting"
+            android:layout_gravity="center_horizontal"
+            android:gravity="center"
+            android:textSize="20sp"
+            android:layout_marginHorizontal="30dp"/>
+
+    </LinearLayout>
+
+
+
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="20sp"
         android:text="@string/costPerPoint"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="70dp"
         android:layout_marginHorizontal="15dp"/>
 
 
     <EditText
-        android:id="@+id/costPerPointConst"
+        android:id="@+id/costPerPointConst1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="number"
@@ -59,7 +63,7 @@
 
 
     <EditText
-        android:id="@+id/departureFeeConst"
+        android:id="@+id/departureFeeConst1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="number"
@@ -77,7 +81,7 @@
 
 
     <EditText
-        android:id="@+id/pricePerTon"
+        android:id="@+id/pricePerTon1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="number"
@@ -86,12 +90,12 @@
         android:layout_marginHorizontal="15dp"/>
 
     <Button
-        android:id="@+id/buttonSaveConst"
+        android:id="@+id/buttonSaveConst1"
         android:layout_width="match_parent"
         android:layout_height="54dp"
         android:layout_gravity="center_horizontal"
         android:textSize="20sp"
-        android:enabled="false"
+        android:enabled="true"
         android:text="@string/buttonSaveConst"
         android:layout_marginHorizontal="20dp"
         android:layout_marginBottom="30dp"
