--- a/app/src/main/res/layout/activity_get_data_for_month.xml
+++ b/app/src/main/res/layout/activity_get_data_for_month.xml
@@ -9,7 +9,7 @@
         android:id="@+id/arrow_back3"
         android:layout_width="30dp"
         android:layout_height="30dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="70dp"
         android:layout_marginHorizontal="20dp"
         android:scaleType="fitCenter"
         android:src="@drawable/navbar___left"
@@ -62,7 +62,6 @@
         android:layout_marginTop="2dp"
         android:visibility="invisible"
         android:orientation="vertical"
-        android:paddingBottom="40dp"
         tools:background="@android:color/darker_gray">
 
         <TextView
@@ -138,8 +137,9 @@
             android:layout_marginHorizontal="30dp"
             android:layout_marginTop="20dp"
             android:gravity="center_horizontal"
+            android:layout_marginBottom="20dp"
             android:textSize="20sp"
             tools:text="zarplata" />
-
     </LinearLayout>
+
 </LinearLayout>
