--- a/app/src/main/res/layout/activity_first_add_constants.xml
+++ b/app/src/main/res/layout/activity_first_add_constants.xml
@@ -95,7 +95,7 @@
         android:layout_height="54dp"
         android:layout_gravity="center_horizontal"
         android:textSize="20sp"
-        android:enabled="true"
+        android:enabled="false"
         android:text="@string/buttonSaveConst"
         android:layout_marginHorizontal="20dp"
         android:layout_marginBottom="30dp"
