--- a/app/src/main/res/layout/activity_first_add_constants.xml
+++ b/app/src/main/res/layout/activity_first_add_constants.xml
@@ -12,27 +12,23 @@
 
     <LinearLayout
 
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
         android:orientation="vertical"
+        android:layout_marginHorizontal="20dp"
         android:layout_marginTop="50dp"
-        android:layout_marginHorizontal="30dp"
-        android:padding = "30dp"
         android:background="@drawable/rounded_frame">
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/Greeting"
-            android:layout_gravity="center_horizontal"
-            android:gravity="center"
             android:textSize="20sp"
-            android:layout_marginHorizontal="30dp"/>
+            android:layout_marginHorizontal="20dp"
+            android:layout_marginVertical="20dp"
+            android:gravity="center"/>
 
     </LinearLayout>
-
-
 
 
     <TextView
@@ -40,7 +36,7 @@
         android:layout_height="wrap_content"
         android:textSize="20sp"
         android:text="@string/costPerPoint"
-        android:layout_marginTop="70dp"
+        android:layout_marginTop="50dp"
         android:layout_marginHorizontal="15dp"/>
 
 
