--- a/app/src/main/res/layout/activity_editconst_modal.xml
+++ b/app/src/main/res/layout/activity_editconst_modal.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginVertical="180dp"
+    android:layout_marginVertical="100dp"
     android:layout_marginHorizontal="30dp"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_gravity="center"
@@ -10,33 +10,43 @@
     android:background="@drawable/rounded_modal"
     tools:context=".EditConstActivityModal">
 
-    <ImageButton
-        android:id="@+id/x_close"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginHorizontal="20dp"
-        android:layout_gravity="end"
-        android:scaleType="fitCenter"
-        android:src="@drawable/close"
-        android:background="@android:color/transparent"/>
 
 
-    <TextView
-        android:layout_width="wrap_content"
+
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/modalTitle"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="10dp"
-        android:textSize="20sp"
-        />
+        android:layout_marginTop="20dp"
+        android:paddingHorizontal="20dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_marginStart="50dp"
+            android:text="@string/modalTitle"
+            android:textSize="20sp"
+            />
+
+        <ImageButton
+            android:id="@+id/x_close"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:scaleType="fitCenter"
+            android:src="@drawable/close"
+            android:background="@android:color/transparent"/>
+
+
+    </LinearLayout>
+
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="20sp"
         android:text="@string/costPerPoint"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="20dp"
         android:layout_marginHorizontal="15dp"/>
 
 
@@ -54,7 +64,7 @@
         android:layout_height="wrap_content"
         android:textSize="20sp"
         android:text="@string/departureFee"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="15dp"
         android:layout_marginHorizontal="15dp"/>
 
 
@@ -72,7 +82,7 @@
         android:layout_height="wrap_content"
         android:textSize="20sp"
         android:text="@string/pricePerTon"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="15dp"
         android:layout_marginHorizontal="15dp"/>
 
 
@@ -94,7 +104,7 @@
         android:enabled="false"
         android:text="@string/buttonSaveConst"
         android:layout_marginHorizontal="20dp"
-        android:layout_marginBottom="30dp"
+        android:layout_marginBottom="20dp"
         android:layout_marginTop="40dp"/>
 
 
