--- a/app/src/main/res/layout/activity_new_gas.xml
+++ b/app/src/main/res/layout/activity_new_gas.xml
@@ -9,7 +9,7 @@
     tools:context=".NewGasActivity">
 
     <ImageButton
-        android:id="@+id/arrow_back"
+        android:id="@+id/arrow_back5"
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:layout_marginTop="30dp"
