--- a/app/src/main/res/layout/activity_new_data.xml
+++ b/app/src/main/res/layout/activity_new_data.xml
@@ -55,7 +55,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="number"
-        android:digits="0123456789"
+        android:digits="0123456789."
         android:layout_marginHorizontal="20dp"
         android:layout_marginTop="8dp" />
 
